fix: ✨ break the layout again

--- a/src/atoms/dropdown/index.module.scss
+++ b/src/atoms/dropdown/index.module.scss
@@ -32,7 +32,7 @@
 .header_button {
   z-index: 100;
   --button-size: calc(var(--nav-size) * 0.5);
-  font-size: 16px;
+  font-size: $font-body;
   display: flex;
   align-items: center;
   justify-content: center;
