--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -74,7 +74,7 @@
       width: 100%;
 
       & > * {
-        font-size: 16px;
+        font-size: $font-body;
       }
 
       .hamburger {
